feat: dataset complete

--- a/exploracion.ipynb
+++ b/exploracion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7dfe2bcf",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "63be8e71",
    "metadata": {},
    "outputs": [
@@ -31,118 +31,118 @@
      "output_type": "stream",
      "text": [
       "Archivo: alta verapaz.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 295\n",
       "----------------------------------------\n",
       "Archivo: bajaverapaz.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 95\n",
       "----------------------------------------\n",
       "Archivo: chimaltenango.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 305\n",
       "----------------------------------------\n",
       "Archivo: chiquimula.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 137\n",
       "----------------------------------------\n",
       "Archivo: ciudadcapital.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 868\n",
       "----------------------------------------\n",
       "Archivo: elprogreso.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 98\n",
       "----------------------------------------\n",
       "Archivo: escuintla.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 394\n",
       "----------------------------------------\n",
       "Archivo: guatemala.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 1038\n",
       "----------------------------------------\n",
       "Archivo: huehuetenango.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 295\n",
       "----------------------------------------\n",
       "Archivo: izabal.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 273\n",
       "----------------------------------------\n",
       "Archivo: jalapa.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 121\n",
       "----------------------------------------\n",
       "Archivo: jutiapa.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 296\n",
       "----------------------------------------\n",
       "Archivo: peten.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 270\n",
       "----------------------------------------\n",
       "Archivo: quetzaltenango.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 365\n",
       "----------------------------------------\n",
       "Archivo: quiche.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 184\n",
       "----------------------------------------\n",
       "Archivo: retalhuleu.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 272\n",
       "----------------------------------------\n",
       "Archivo: sacatepequez.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 208\n",
       "----------------------------------------\n",
       "Archivo: san marcos.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 432\n",
       "----------------------------------------\n",
       "Archivo: santa rosa.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 133\n",
       "----------------------------------------\n",
       "Archivo: solola.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 111\n",
       "----------------------------------------\n",
       "Archivo: suchitepequez.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 296\n",
       "----------------------------------------\n",
       "Archivo: totonicapan.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 51\n",
       "----------------------------------------\n",
       "Archivo: zacapa.csv\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
-      "Número de columnas: 18\n",
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n",
+      "Número de columnas: 17\n",
       "Número de filas: 70\n",
       "----------------------------------------\n"
      ]
@@ -150,12 +150,17 @@
    ],
    "source": [
     "def read_csv_flexible(path):\n",
+    "    # Intenta varios encodings\n",
     "    for enc in ('utf-8', 'latin1', 'cp1252'):\n",
     "        try:\n",
-    "            return pd.read_csv(path, encoding=enc)\n",
+    "            df = pd.read_csv(path, encoding=enc)\n",
+    "            break\n",
     "        except UnicodeDecodeError:\n",
     "            continue\n",
-    "    return pd.read_csv(path, encoding='latin1', engine='python')\n",
+    "    else:\n",
+    "        df = pd.read_csv(path, encoding='latin1', engine='python')\n",
+    "    df = df.loc[:, ~df.columns.str.match(r'^Unnamed')]\n",
+    "    return df\n",
     "\n",
     "csv_files = glob.glob('Data/*.csv')\n",
     "total_rows = 0\n",
@@ -171,7 +176,7 @@
     "    print(f\"Encabezados: {headers}\")\n",
     "    print(f\"Número de columnas: {n_cols}\")\n",
     "    print(f\"Número de filas: {n_rows}\")\n",
-    "    print('-'*40)\n",
+    "    print('-' * 40)\n",
     "\n",
     "    total_rows += n_rows\n"
    ]
@@ -186,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "b15724b6",
    "metadata": {},
    "outputs": [
@@ -195,13 +200,45 @@
      "output_type": "stream",
      "text": [
       "Total de filas en todos los CSV: 6607\n",
-      "Encabezados: ['CODIGO', 'Unnamed: 1', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n"
+      "Encabezados: ['CODIGO', 'DISTRITO', 'DEPARTAMENTO', 'MUNICIPIO', 'ESTABLECIMIENTO', 'DIRECCION', 'TELEFONO', 'SUPERVISOR', 'DIRECTOR', 'NIVEL', 'SECTOR', 'AREA', 'STATUS', 'MODALIDAD', 'JORNADA', 'PLAN', 'DEPARTAMENTAL']\n"
      ]
     }
    ],
    "source": [
     "print(f\"Total de filas en todos los CSV: {total_rows}\")\n",
     "print(f\"Encabezados: {headers}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ec419e3",
+   "metadata": {},
+   "source": [
+    "# Combinar todos los csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a56c9263",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unidos 23 archivos en Data/RepublicaGuatemala.csv, total filas: 6607\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_list = [read_csv_flexible(f) for f in csv_files]\n",
+    "df_all  = pd.concat(df_list, ignore_index=True)\n",
+    "\n",
+    "output_path = 'Data/RepublicaGuatemala.csv'\n",
+    "df_all.to_csv(output_path, index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "print(f\"Unidos {len(csv_files)} archivos en {output_path}, total filas: {len(df_all)}\")"
    ]
   }
  ],
