fix: update execution counts (6607) for RepublicaGuatemala.csv

--- a/exploracion.ipynb
+++ b/exploracion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "id": "7dfe2bcf",
    "metadata": {},
    "outputs": [],
@@ -22,256 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "63be8e71",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Archivo</th>\n",
-       "      <th>Columnas</th>\n",
-       "      <th>Filas</th>\n",
-       "      <th>Encabezados</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>alta verapaz.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>295</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>bajaverapaz.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>95</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>chimaltenango.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>305</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>chiquimula.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>137</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ciudadcapital.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>868</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>elprogreso.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>98</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>escuintla.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>394</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>guatemala.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1038</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>huehuetenango.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>295</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>izabal.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>273</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>jalapa.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>121</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>jutiapa.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>296</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>peten.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>270</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>quetzaltenango.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>365</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>quiche.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>184</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>retalhuleu.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>272</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>sacatepequez.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>208</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>san marcos.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>432</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>santa rosa.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>133</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>solola.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>111</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>suchitepequez.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>296</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>totonicapan.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>51</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>zacapa.csv</td>\n",
-       "      <td>17</td>\n",
-       "      <td>70</td>\n",
-       "      <td>CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               Archivo  Columnas  Filas  \\\n",
-       "0     alta verapaz.csv        17    295   \n",
-       "1      bajaverapaz.csv        17     95   \n",
-       "2    chimaltenango.csv        17    305   \n",
-       "3       chiquimula.csv        17    137   \n",
-       "4    ciudadcapital.csv        17    868   \n",
-       "5       elprogreso.csv        17     98   \n",
-       "6        escuintla.csv        17    394   \n",
-       "7        guatemala.csv        17   1038   \n",
-       "8    huehuetenango.csv        17    295   \n",
-       "9           izabal.csv        17    273   \n",
-       "10          jalapa.csv        17    121   \n",
-       "11         jutiapa.csv        17    296   \n",
-       "12           peten.csv        17    270   \n",
-       "13  quetzaltenango.csv        17    365   \n",
-       "14          quiche.csv        17    184   \n",
-       "15      retalhuleu.csv        17    272   \n",
-       "16    sacatepequez.csv        17    208   \n",
-       "17      san marcos.csv        17    432   \n",
-       "18      santa rosa.csv        17    133   \n",
-       "19          solola.csv        17    111   \n",
-       "20   suchitepequez.csv        17    296   \n",
-       "21     totonicapan.csv        17     51   \n",
-       "22          zacapa.csv        17     70   \n",
-       "\n",
-       "                                          Encabezados  \n",
-       "0   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "1   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "2   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "3   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "4   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "5   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "6   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "7   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "8   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "9   CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "10  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "11  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "12  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "13  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "14  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "15  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "16  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "17  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "18  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "19  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "20  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "21  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  \n",
-       "22  CODIGO, DISTRITO, DEPARTAMENTO, MUNICIPIO, EST...  "
+       "np.int64(6607)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +77,7 @@
     "    \n",
     "resumen_df = pd.DataFrame(data_info)\n",
     "resumen_df\n",
-    "# resumen_df[\"Filas\"].sum()\n",
+    "# resumen_df[\"Filas\"].sum() #6607\n",
     "\n"
    ]
   },
@@ -336,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "b15724b6",
    "metadata": {},
    "outputs": [
@@ -364,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "id": "a56c9263",
    "metadata": {},
    "outputs": [
